test/fail/enums_and_variants/call_empty_variant.lly
#[
SyntaxError: Variant Gamma should not get args.
    from call_empty_variant.lly:11:
]#

enum TestE {
  Alpha,
  Beta,
  Gamma
}
print(Gamma())
